<resources>
    <string name="app_name">My Application</string>
    <string name="diemo">Diemo</string>
    <string name="login">로그인</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="register">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="registration">등록</string>
    <string name="select">오늘의 기분을 선택해주세요!</string>
    <string name="happy">#happy</string>
    <string name="sad">#sad</string>
    <string name="angry">#angry</string>
    <string name="soso">#soso</string>
    <string name="write">오늘의 일기를 작성해주세요.</string>
    <string name="logout">로그아웃</string>
    <string name="leave">회원탈퇴</string>
    <string name="help">도움이 필요하신가요?</string>
    <string name="message">Bot Message</string>
    <string name="bulletin">게시판</string>
    <string name="chat">챗봇</string>
    <string name="Enter_message">Enter Message</string>
    <string name="diary">오늘의 일기</string>
    <string name="share">게시판 공유</string>
    <string name="delete">삭제</string>
    <string name="home">홈</string>
    <string name="setting">설정</string>
    <string name="setting1">개인 설정</string>
    <string name="save">저장</string>
    <string name="name_change">닉네임 변경</string>
    <string name="new_name">새로운 닉네임을 입력하세요</string>
    <string name="secession">탈퇴하려면 누르세요.</string>
    <string name="logout1">로그아웃하려면 누르세요.</string>
    <string name="change_pwd">비밀번호를 재설정하고 싶으면 이메일 주소를 작성하세요.</string>
    <string name="email1">Email</string>
    <string name="send">확인</string>
    <string name="alarm">알림 설정</string>
    <string name="push_alarm">푸시 알림을 받으려면 누르세요.</string>
    <string name="alarm1">알림 받기</string>
    <string name="mode">화면 모드</string>
    <string name="dark_mode">다크 모드로 설정하려면 체크하세요.</string>
    <string name="etc">기타</string>
    <string name="call">전문적인 심리 상담을 원하는 경우 아래 번호로 전화하세요.</string>
    <string name="call1">129 (보건복지상담센터)</string>
    <string name="call_1">보건의료, 자살, 학대, 정신건강 등에 관해 상담을 받을 수 있습니다</string>
    <string name="call2">1577-0199</string>
    <string name="call_2">비대면 심리지원 서비스를 받을 수 있습니다</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>