<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".WriteActivity">

    <Button
        android:id="@+id/btn_write"
        style="@style/customButtonFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_round"
        android:text="@string/registration"
        android:textStyle="bold" />



    <TextView
           android:id="@+id/selection"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="16sp"
           android:hint="@string/select"
           android:layout_marginTop="50dp"
           android:textAlignment="center" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_happy"
            style="@style/customRadioButtonFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/happy"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_sad"
            style="@style/customRadioButtonFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sad"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_angry"
            style="@style/customRadioButtonFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/angry"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_soso"
            style="@style/customRadioButtonFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/soso"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />


    </RadioGroup>

    <EditText
        android:id="@+id/et_content"
        style="@style/customEditTextFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/writing_border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="20"
        android:padding="15dp"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck" />


</LinearLayout>