<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_color"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/et_email"
        style="@style/customEditTextFontStyle"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:background="@drawable/button_login"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pass"
        style="@style/customEditTextFontStyle"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:background="@drawable/button_login"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_name"
        style="@style/customEditTextFontStyle"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:background="@drawable/button_login"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_register"
        style="@style/customButtonFontStyle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_login"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

</LinearLayout>